--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "@bluelovers/tsconfig/esm/esModuleInterop"
+  "extends": "@bluelovers/tsconfig/esm/esModuleInterop",
+  "compilerOptions": {
+    "jsx": "react",
+    "sourceMap": true,
+    "inlineSourceMap": false
+  }
 }
