--- a/packages/react-use-localstorage/package.json
+++ b/packages/react-use-localstorage/package.json
@@ -1,73 +1,65 @@
 {
-  "name": "react-use-localstorage",
+  "name": "react-use-localstorage2",
   "version": "3.4.2",
-  "description": "Use Local Storage with React hooks",
-  "author": "Sung Kim <sungmkim80@gmail.com>",
-  "license": "MIT",
+  "description": "Access localStorage-like storage with React hooks, for Server and Client",
+  "keywords": [
+    "react",
+    "localStorage",
+    "server",
+    "client",
+    "ssr",
+    "storage",
+    "hooks",
+    "browser",
+    "web"
+  ],
+  "homepage": "https://github.com/bluelovers/ws-react/tree/master/packages/react-use-localstorage#readme",
+  "bugs": {
+    "url": "https://github.com/bluelovers/ws-react/issues"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dance2die/react-use-localstorage.git"
+    "url": "git+https://github.com/bluelovers/ws-react.git"
   },
-  "homepage": "https://github.com/dance2die/react-use-localstorage",
-  "main": "dist/react-use-localstorage.esm.js",
-  "umd:main": "dist/react-use-localstorage.umd.production.js",
-  "module": "dist/react-use-localstorage.esm.js",
-  "typings": "dist/index.d.ts",
-  "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test --env=jsdom",
-    "version:alpha": "npm version prerelease --preid=alpha",
-    "publish:alpha": "npm publish --tag alpha",
-    "prepublishOnly": "tsdx build"
-  },
-  "keywords": [
-    "localStorage",
-    "react",
-    "hooks"
+  "license": "MIT",
+  "author": "Sung Kim <sungmkim80@gmail.com>",
+  "contributors": [
+    "lilasquared <aaronmroberts1@gmail.com>",
+    "TheAifam5 <theaifam5@gmail.com> (https://theaifam5.eu/)",
+    "VitorLuizC <vitorluizc@outlook.com> (http://vitorluizc.github.io/)"
   ],
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "coverage": "npx nyc yarn run test",
+    "lint": "npx eslint **/*.ts",
+    "ncu": "npx yarn-tool ncu -u",
+    "npm:publish": "npm publish",
+    "postpublish_": "git commit -m \"chore(release): publish\" .",
+    "prepublish:lockfile": "npx sync-lockfile .",
+    "prepublishOnly": "yarn run ncu && yarn run sort-package-json && yarn run test",
+    "sort-package-json": "npx yarn-tool sort",
+    "test": "jest --coverage",
+    "test:mocha": "npx mocha --require ts-node/register \"!(node_modules)/**/*.{test,spec}.{ts,tsx}\"",
+    "tsc:default": "tsc -p tsconfig.json",
+    "tsc:esm": "tsc -p tsconfig.esm.json"
+  },
+  "dependencies": {},
   "devDependencies": {
-    "@testing-library/react-hooks": "^2.0.3",
-    "@types/jest": "^24.0.18",
-    "@types/react": "^16.9.5",
-    "@types/react-dom": "^16.9.1",
-    "husky": "^3.0.8",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.10.2",
-    "react-test-renderer": "^16.10.2",
-    "tsdx": "^0.9.3",
-    "tslib": "^1.10.0",
-    "typescript": "^3.6.3"
+    "@testing-library/react-hooks": "^3.2.1",
+    "@types/jest": "^25.1.3",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "jest": "^25.1.0",
+    "jest-circus": "^25.1.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-test-renderer": "^16.12.0",
+    "ts-jest": "^25.2.1"
   },
   "peerDependencies": {
-    "react": "^16.10.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
-  },
-  "jest": {
-    "setupFiles": [
-      "./test/setup.ts"
-    ]
-  },
-  "contributors": [
-    {
-      "name": "lilasquared",
-      "email": "aaronmroberts1@gmail.com"
-    },
-    {
-      "name": "TheAifam5",
-      "email": "theaifam5@gmail.com",
-      "url": "https://theaifam5.eu/"
-    },
-    {
-      "name": "VitorLuizC",
-      "email": "vitorluizc@outlook.com",
-      "url": "http://vitorluizc.github.io/"
-    }
-  ]
+    "react": "^16.12.0"
+  }
 }
