--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "packages/*"
   ],
   "scripts": {
+    "prepublish:lockfile": "ynpx sync-lockfile",
     "lerna:publish": "lerna publish",
     "lerna:publish:yes": "lerna publish --yes --cd-version patch",
     "ncu": "npx yarn-tool ncu -u",
