--- a/packages/jsx-linebreak/package.json
+++ b/packages/jsx-linebreak/package.json
@@ -51,5 +51,6 @@
   "peerDependencies": {
     "preact": "^10.3.2",
     "react": "^16.13.0"
-  }
+  },
+  "gitHead": "78b9a46321b2705c000c0fab6453357d45349ec6"
 }
