--- a/packages/material-ui-theme-state/package.json
+++ b/packages/material-ui-theme-state/package.json
@@ -51,5 +51,6 @@
     "@material-ui/core": "^4.9.4",
     "@types/react": "^16.9.23",
     "react": "^16.13.0"
-  }
+  },
+  "gitHead": "78b9a46321b2705c000c0fab6453357d45349ec6"
 }
