--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@types/node": "*",
-    "@bluelovers/tsconfig": "^1.0.18"
+    "@types/node": "^13.11.0",
+    "@bluelovers/tsconfig": "^1.0.19"
   },
   "peerDependencies": {
     "lerna": "^3.20.2"
