--- a/packages/get-provider-tmp/package.json
+++ b/packages/get-provider-tmp/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "provider-is-who",
+  "name": "get-provider-tmp",
   "version": "1.0.1",
   "description": "",
-  "homepage": "https://github.com/bluelovers/ws-react/tree/master/packages/provider-is-who#readme",
+  "homepage": "https://github.com/bluelovers/ws-react/tree/master/packages/get-provider-tmp#readme",
   "bugs": {
     "url": "https://github.com/bluelovers/ws-react/issues"
   },
@@ -28,6 +28,10 @@
     "tsc:esm": "tsc -p tsconfig.esm.json"
   },
   "dependencies": {
-    "@types/node": "*"
+    "provider-is-who": "^1.0.1"
+  },
+  "devDependencies": {
+    "@bluelovers/tsconfig": "^1.0.19",
+    "@types/node": "^13.9.2"
   }
 }
