chore: update deps

--- a/packages/get-provider-tmp/package.json
+++ b/packages/get-provider-tmp/package.json
@@ -30,8 +30,5 @@
   "dependencies": {
     "provider-is-who": "^1.0.1"
   },
-  "devDependencies": {
-    "@bluelovers/tsconfig": "^1.0.19",
-    "@types/node": "^13.9.2"
-  }
+  "devDependencies": {}
 }
