--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lerna:publish:yes": "lerna publish --yes --cd-version patch",
     "postpublish_": "git subrepo push packages/react-use-localstorage",
     "ncu": "npx yarn-tool ncu -u",
-    "sort-package-json": "npx sort-package-json ./package.json",
+    "sort-package-json": "npx yarn-tool sort",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
