chore: update deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@bluelovers/tsconfig/esm/esModuleInterop",
+  "extends": "@bluelovers/tsconfig/esm/mapfile.json",
   "compilerOptions": {
     "jsx": "react",
     "sourceMap": true,
