--- a/packages/@lazy-react/next-useragent/package.json
+++ b/packages/@lazy-react/next-useragent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lazy-react/next-useragent",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "homepage": "https://github.com/bluelovers/ws-react/tree/master/packages/@lazy-react/next-useragent#readme",
   "bugs": {
@@ -29,12 +29,11 @@
     "tsc:default": "tsc -p tsconfig.json",
     "tsc:esm": "tsc -p tsconfig.esm.json"
   },
-  "devDependencies": {},
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@lazy-react/get-next-ctx": "^1.0.0",
-    "@lazy-http/get-user-agent": "^1.0.3"
+    "@lazy-http/get-user-agent": "^1.0.3",
+    "@lazy-react/get-next-ctx": "^1.0.1"
   }
 }
