--- a/packages/@lazy-react/extend-next-with-mui/package.json
+++ b/packages/@lazy-react/extend-next-with-mui/package.json
@@ -28,17 +28,12 @@
     "tsc:default": "tsc -p tsconfig.json",
     "tsc:esm": "tsc -p tsconfig.esm.json"
   },
-  "devDependencies": {
-    "@material-ui/core": "^4.9.14",
-    "@types/react": "^16.9.35",
-    "next": "^9.4.1",
-    "react": "^16.13.1"
-  },
+  "devDependencies": {},
   "peerDependencies": {
-    "@material-ui/core": "^4.9.14",
-    "@types/react": "^16.9.35",
-    "next": "^9.4.1",
-    "react": "^16.13.1"
+    "@material-ui/core": "^4",
+    "@types/react": "^16",
+    "next": "^9",
+    "react": "^16"
   },
   "publishConfig": {
     "access": "public"
