--- a/packages/jsx-linebreak/package.json
+++ b/packages/jsx-linebreak/package.json
@@ -41,16 +41,12 @@
     "tsc:esm": "tsc -p tsconfig.esm.json"
   },
   "dependencies": {
-    "crlf-normalize": "^1.0.3"
+    "crlf-normalize": "^1.0.5"
   },
-  "devDependencies": {
-    "preact": "^10.4.1",
-    "preact-render-to-string": "^5.1.8",
-    "react": "^16.13.1"
-  },
+  "devDependencies": {},
   "peerDependencies": {
-    "preact": "^10.4.1",
-    "react": "^16.13.1"
+    "preact": "^10",
+    "react": "^16"
   },
   "gitHead": "7087b6fcae235888b58ff84599744b33367a669f"
 }
