--- a/packages/material-ui-theme-state/package.json
+++ b/packages/material-ui-theme-state/package.json
@@ -39,18 +39,13 @@
     "tsc:esm": "npx tsc -p tsconfig.esm.json"
   },
   "dependencies": {
-    "ts-type": "^1.2.16"
+    "ts-type": "^1.2.32"
   },
-  "devDependencies": {
-    "@material-ui/core": "^4.9.14",
-    "@types/bluebird": "^3.5.31",
-    "@types/react": "^16.9.35",
-    "react": "^16.13.1"
-  },
+  "devDependencies": {},
   "peerDependencies": {
-    "@material-ui/core": "^4.9.14",
-    "@types/react": "^16.9.35",
-    "react": "^16.13.1"
+    "@material-ui/core": "^4",
+    "@types/react": "^16",
+    "react": "^16"
   },
   "gitHead": "7087b6fcae235888b58ff84599744b33367a669f"
 }
