--- a/packages/react-use-localstorage/package.json
+++ b/packages/react-use-localstorage/package.json
@@ -48,22 +48,11 @@
   },
   "dependencies": {
     "local-storage-fallback": "^4.1.1",
-    "ts-type": "^1.2.16"
+    "ts-type": "^1.2.32"
   },
-  "devDependencies": {
-    "@testing-library/react-hooks": "^3.2.1",
-    "@types/jest": "^25.2.2",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "jest": "^26.0.1",
-    "jest-circus": "^26.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-test-renderer": "^16.13.1",
-    "ts-jest": "^26.0.0"
-  },
+  "devDependencies": {},
   "peerDependencies": {
-    "react": "^16.13.1"
+    "react": "^16"
   },
   "gitHead": "7087b6fcae235888b58ff84599744b33367a669f"
 }
