--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lazy-react",
     "react",
     "next",
+    "material-ui",
+    "mui",
     "component",
     "components",
     "use",
@@ -48,6 +50,7 @@
     "@testing-library/react-hooks": "^3.4.1",
     "@types/bluebird": "^3.5.32",
     "@types/jest": "^26.0.8",
+    "@types/lodash": "^4.14.159",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
