--- a/packages/@lazy-react/next-mui-link/package.json
+++ b/packages/@lazy-react/next-mui-link/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lazy-react/next-mui-link",
-  "version": "1.0.2",
+  "version": "1.0.1",
   "description": "Using Next.js Link Component with Material UI",
   "keywords": [
     "lazy-react",
@@ -33,7 +33,7 @@
     "test": "echo \"Error: no test specified\"",
     "test:jest": "ynpx --quiet jest -- --coverage",
     "test:mocha": "ynpx --quiet -p ts-node -p mocha mocha -- --require ts-node/register \"!(node_modules)/**/*.{test,spec}.{ts,tsx}\"",
-    "preversion": "yarn run prepublishOnly:check-bin && yarn run test",
+    "preversion": "yarn run test",
     "prepublishOnly": "echo prepublishOnly",
     "prepublishOnly:check-bin": "ynpx --quiet @yarn-tool/check-pkg-bin",
     "prepublishOnly:update": "yarn run ncu && yarn run sort-package-json",
