--- a/packages/@lazy-react/extend-next-with-mui/package.json
+++ b/packages/@lazy-react/extend-next-with-mui/package.json
@@ -32,7 +32,8 @@
     "@material-ui/core": "^4",
     "@types/react": "^16",
     "next": "^9",
-    "react": "^16"
+    "react": "^16",
+    "tslib": "^2"
   },
   "publishConfig": {
     "access": "public"
