--- a/packages/@lazy-react/extend-next-with-styled-components/package.json
+++ b/packages/@lazy-react/extend-next-with-styled-components/package.json
@@ -30,7 +30,8 @@
   },
   "peerDependencies": {
     "@types/styled-components": "^5",
-    "styled-components": "^5"
+    "styled-components": "^5",
+    "tslib": "^2"
   },
   "publishConfig": {
     "access": "public"
