--- a/packages/material-ui-theme-state/package.json
+++ b/packages/material-ui-theme-state/package.json
@@ -48,7 +48,8 @@
   "peerDependencies": {
     "@material-ui/core": "^4",
     "@types/react": "^16",
-    "react": "^16"
+    "react": "^16",
+    "tslib": "^2"
   },
   "gitHead": "7087b6fcae235888b58ff84599744b33367a669f"
 }
