--- a/packages/react-use-localstorage/package.json
+++ b/packages/react-use-localstorage/package.json
@@ -51,7 +51,8 @@
     "ts-type": "^1.2.32"
   },
   "peerDependencies": {
-    "react": "^16"
+    "react": "^16",
+    "tslib": "^2"
   },
   "gitHead": "7087b6fcae235888b58ff84599744b33367a669f"
 }
