--- a/packages/material-ui-theme-state/tsconfig.esm.json
+++ b/packages/material-ui-theme-state/tsconfig.esm.json
@@ -8,6 +8,7 @@
     "skipLibCheck": true,
     "noImplicitAny": true,
     "inlineSourceMap": false,
+    "importHelpers": true,
     "sourceMap": true
   },
   "exclude": [
