--- a/packages/material-ui-theme-state/tsconfig.json
+++ b/packages/material-ui-theme-state/tsconfig.json
@@ -5,6 +5,7 @@
     "noImplicitAny": true,
     "inlineSourceMap": false,
     "sourceMap": true,
+    "importHelpers": true,
     "rootDir": "./lib"
   },
   "exclude": [
