--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.4",
+    "@types/webfontloader": "^1.6.32",
     "jest": "^26.6.0",
     "jest-circus": "^26.6.0",
     "next": "^9.5.5",
@@ -64,7 +65,8 @@
     "react-dom": "^17.0.0",
     "react-test-renderer": "^17.0.0",
     "styled-components": "^5.2.0",
-    "ts-jest": "^26.4.1"
+    "ts-jest": "^26.4.1",
+    "webfontloader": "^1.6.28"
   },
   "peerDependencies": {
     "lerna": "^3.22.1"
