--- a/packages/@lazy-react/use-webfontloader/package.json
+++ b/packages/@lazy-react/use-webfontloader/package.json
@@ -40,6 +40,7 @@
     "sort-package-json": "yarn-tool sort"
   },
   "peerDependencies": {
+    "react": "*",
     "webfontloader": "*"
   },
   "publishConfig": {
