feat: lodash.memoize

--- a/packages/@lazy-react/use-webfontloader/package.json
+++ b/packages/@lazy-react/use-webfontloader/package.json
@@ -40,10 +40,13 @@
     "sort-package-json": "yarn-tool sort"
   },
   "peerDependencies": {
+    "lodash": "*",
     "react": "*",
     "webfontloader": "*"
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "dependencies": {},
+  "devDependencies": {}
 }
