--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/seedrandom": "^2.4.28",
     "@types/styled-components": "^5.1.4",
     "@types/webfontloader": "^1.6.32",
     "jest": "^26.6.3",
