--- a/packages/@lazy-react/material-ui-nested-menu-item/package.json
+++ b/packages/@lazy-react/material-ui-nested-menu-item/package.json
@@ -39,6 +39,9 @@
     "ncu": "yarn-tool ncu -u",
     "sort-package-json": "yarn-tool sort"
   },
+  "dependencies": {
+    "material-ui-nested-menu-item": "^1.0.2"
+  },
   "peerDependencies": {
     "material-ui-nested-menu-item": "^1.0.2",
     "tslib": "^2"
