--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-test-renderer": "^17.0.1",
+    "recoil": "^0.1.2",
     "styled-components": "^5.2.1",
     "ts-jest": "^26.4.4",
     "webfontloader": "^1.6.28"
