--- a/packages/@lazy-react/next-mui-link/package.json
+++ b/packages/@lazy-react/next-mui-link/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lazy-react/next-mui-link",
-  "version": "1.0.8",
+  "version": "2.0.0",
   "description": "Using Next.js Link Component with Material UI",
   "keywords": [
     "lazy-react",
@@ -23,27 +23,34 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bluelovers/ws-react.git"
+    "url": "git+https://github.com/bluelovers/ws-react.git",
+    "directory": "packages/@lazy-react/next-mui-link"
   },
   "license": "ISC",
   "author": "bluelovers",
   "main": "index.js",
   "scripts": {
+    "coverage": "yarn run test -- --coverage",
     "lint": "ynpx --quiet eslint -- **/*.ts",
     "test": "echo \"Error: no test specified\"",
     "test:jest": "ynpx --quiet jest -- --coverage",
+    "test:jest:coverage": "yarn run test:jest -- --coverage",
+    "test:jest:snapshot": "yarn run test:jest -- -u",
     "test:mocha": "ynpx --quiet -p ts-node -p mocha mocha -- --require ts-node/register \"!(node_modules)/**/*.{test,spec}.{ts,tsx}\"",
+    "test:snapshot": "yarn run test -- -u",
+    "test:tsd": "ynpx tsd",
     "preversion": "yarn run test",
     "prepublishOnly": "echo prepublishOnly",
     "prepublishOnly:check-bin": "ynpx --quiet @yarn-tool/check-pkg-bin",
     "prepublishOnly:update": "yarn run ncu && yarn run sort-package-json",
     "ncu": "yarn-tool ncu -u",
-    "sort-package-json": "yarn-tool sort"
-  },
-  "publishConfig": {
-    "access": "public"
+    "sort-package-json": "yarn-tool sort",
+    "tsc:showConfig": "ynpx get-current-tsconfig -p"
   },
   "peerDependencies": {
     "tslib": "^2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
