--- a/lerna.json
+++ b/lerna.json
@@ -30,14 +30,21 @@
       "conventionalGraduate": false
     },
     "version": {
+      "concurrency": 1,
       "noPrivate": true,
       "conventionalCommits": true,
       "changelogPreset": "@bluelovers/conventional-changelog-bluelovers"
     },
     "run": {
+      "concurrency": 1,
       "stream": true
     },
     "exec": {
+      "concurrency": 1,
+      "stream": true
+    },
+    "add": {
+      "concurrency": 1,
       "stream": true
     }
   },
