--- a/package.json
+++ b/package.json
@@ -33,44 +33,92 @@
     "packages/*"
   ],
   "scripts": {
+    "review:all": "yarn-tool ws run review --concurrency 1",
+    "review:since": "yarn run review:all -- --since",
+    "coverage:all": "yarn-tool ws run coverage --concurrency 1",
+    "coverage:since": "yarn run coverage:all -- --since",
+    "lint:all": "yarn-tool ws run lint --concurrency 1",
+    "lint:since": "yarn run lint:all -- --since",
+    "pretest": "echo pretest",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test:all": "yarn-tool ws run test --concurrency 1",
+    "test:jest:clearCache": "jest --clearCache",
+    "test:since": "yarn run test:all -- --since",
+    "test:snapshot:all": "yarn-tool ws run test:snapshot --concurrency 1",
+    "test:snapshot:since": "yarn run test:snapshot:all -- --since",
+    "test:tsd:all": "yarn-tool ws run test:tsd --concurrency 1",
+    "test:tsd:since": "yarn run test:tsd:all -- --since",
+    "install:frozenLockfile": "yarn-tool install --frozen-lockfile",
+    "install:resetLockfile": "yarn-tool install --reset-lockfile",
+    "build:all": "yarn-tool ws run build --concurrency 1",
+    "build:since": "yarn run build:all -- --since",
+    "ci:install": "yarn install --frozen-lockfile && yarn add -W yarn-tool lerna ynpx ts-node ts-jest jest typescript@next @bluelovers/jest-config",
+    "ci:build": "echo ci:build",
     "npm:publish": "npm publish",
     "lerna:publish": "lerna publish",
     "lerna:publish:yes": "lerna publish --yes --cd-version patch",
+    "ws:fix-all": "yarn-tool fix-all  --overwriteHostedGitInfo",
+    "ws:fix-all:resetStaticFiles": "yarn run ws:fix-all -- --resetStaticFiles",
+    "preversion": "yarn run test",
+    "version": "echo version",
+    "postversion": "yarn-tool fix-all",
+    "prepublish": "echo prepublish",
     "prepublish:lockfile": "ynpx sync-lockfile",
+    "prepare": "echo prepare",
+    "prepare:fix-ws-links": "ynpx --quiet @yarn-tool/fix-ws-links",
+    "prepublishOnly": "echo prepublishOnly",
     "prepublishOnly_": "yarn run ncu && yarn run sort-package-json && yarn run test",
+    "prepublishOnly:check-bin": "ynpx --quiet @yarn-tool/check-pkg-bin",
+    "prepublishOnly:lockfile": "ynpx --quiet sync-lockfile",
+    "prepublishOnly:root": "yarn run prepublishOnly:check-bin && yarn run prepare:fix-ws-links",
+    "prepublishOnly:update": "yarn run ncu && yarn run sort-package-json",
+    "prepack": "echo prepack",
+    "pack": "echo pack",
+    "postpack": "echo postpack",
+    "publish": "echo publish",
+    "postpublish": "echo postpublish",
     "postpublish_": "git subrepo push packages/react-use-localstorage",
-    "ncu": "npx yarn-tool ncu -u && npx yarn-tool ws exec yarn-tool ncu -- -u",
-    "sort-package-json": "npx yarn-tool sort && npx yarn-tool ws exec yarn-tool sort"
+    "postpublishOnly": "yarn run postpublishOnly:ws-root-changelog & echo postpublishOnly",
+    "postpublishOnly:ws-root-changelog": "ynpx ws-root-changelog & git add ./CHANGELOG.md & git commit ./CHANGELOG.md -m \"chore(changelog): update changelog toc in workspaces root\" & echo update changelog toc in workspaces root",
+    "ncu": "yarn-tool ncu -u --AA",
+    "ncu:ws": "yarn-tool ncu -u --AA",
+    "ncu:root": "yarn-tool ncu -u",
+    "sort-package-json": "yarn-tool sort && yarn-tool ws sort",
+    "sort-package-json:root": "yarn-tool sort",
+    "sort-package-json:ws": "yarn-tool ws sort",
+    "tsc:showConfig": "ynpx get-current-tsconfig -p"
   },
   "resolutions": {},
   "devDependencies": {
     "@bluelovers/tsconfig": "^1.0.32",
-    "@material-ui/core": "^4.11.0",
-    "@testing-library/react-hooks": "^3.4.2",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.1",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/bluebird": "^3.5.38",
-    "@types/jest": "^26.0.15",
-    "@types/lodash": "^4.14.165",
+    "@types/jest": "^29.2.4",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.17",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
-    "@types/seedrandom": "^2.4.28",
-    "@types/styled-components": "^5.1.4",
-    "@types/webfontloader": "^1.6.32",
-    "jest": "^26.6.3",
-    "jest-circus": "^26.6.3",
-    "next": "^10.0.1",
-    "preact": "^10.5.7",
-    "preact-render-to-string": "^5.1.11",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-test-renderer": "^17.0.1",
-    "recoil": "^0.1.2",
-    "styled-components": "^5.2.1",
-    "ts-jest": "^26.4.4",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@types/seedrandom": "^3.0.3",
+    "@types/styled-components": "^5.1.26",
+    "@types/webfontloader": "^1.6.35",
+    "@yarn-tool/ws-find-up-paths": "*",
+    "jest": "^29.3.1",
+    "jest-circus": "^29.3.1",
+    "next": "^13.1.1",
+    "preact": "^10.11.3",
+    "preact-render-to-string": "^5.2.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
+    "recoil": "^0.7.6",
+    "styled-components": "^5.3.6",
+    "ts-jest": "^29.0.3",
     "webfontloader": "^1.6.28"
   },
   "peerDependencies": {
-    "lerna": "^3.22.1"
+    "lerna": "^6.1.0"
   }
 }
