--- a/packages/@lazy-react/extend-next-with-mui/package.json
+++ b/packages/@lazy-react/extend-next-with-mui/package.json
@@ -8,7 +8,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bluelovers/ws-react.git"
+    "url": "git+https://github.com/bluelovers/ws-react.git",
+    "directory": "packages/@lazy-react/extend-next-with-mui"
   },
   "license": "ISC",
   "author": "bluelovers",
@@ -18,21 +19,27 @@
     "lint": "npx eslint **/*.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:jest": "jest --coverage",
+    "test:jest:coverage": "yarn run test:jest -- --coverage",
+    "test:jest:snapshot": "yarn run test:jest -- -u",
     "test:mocha": "npx mocha --require ts-node/register \"!(node_modules)/**/*.{test,spec}.{ts,tsx}\"",
+    "test:snapshot": "yarn run test -- -u",
+    "test:tsd": "ynpx tsd",
     "npm:publish": "npm publish",
+    "preversion": "yarn run test",
     "prepublish:lockfile": "npx sync-lockfile .",
     "prepublishOnly_": "yarn run ncu && yarn run sort-package-json && yarn run test",
     "postpublish_": "git commit -m \"chore(release): publish\" .",
     "ncu": "npx yarn-tool ncu -u",
     "sort-package-json": "npx yarn-tool sort",
     "tsc:default": "tsc -p tsconfig.json",
-    "tsc:esm": "tsc -p tsconfig.esm.json"
+    "tsc:esm": "tsc -p tsconfig.esm.json",
+    "tsc:showConfig": "ynpx get-current-tsconfig -p"
   },
   "peerDependencies": {
     "@material-ui/core": "^4",
-    "@types/react": "^16",
-    "next": "^10",
-    "react": "^17",
+    "@types/react": "^18",
+    "next": "^13",
+    "react": "^18",
     "tslib": "^2"
   },
   "publishConfig": {
