--- a/packages/jsx-linebreak/package.json
+++ b/packages/jsx-linebreak/package.json
@@ -11,13 +11,14 @@
     "crlf",
     "preact"
   ],
-  "homepage": "https://github.com/bluelovers/ws-reac/tree/master/packages/jsx-linebreak#readme",
+  "homepage": "https://github.com/bluelovers/ws-react/tree/master/packages/jsx-linebreak#readme",
   "bugs": {
     "url": "https://github.com/bluelovers/ws-react/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bluelovers/ws-react.git"
+    "url": "git+https://github.com/bluelovers/ws-react.git",
+    "directory": "packages/jsx-linebreak"
   },
   "license": "ISC",
   "author": "",
@@ -29,8 +30,14 @@
     "coverage": "npx nyc yarn run test",
     "lint": "npx eslint **/*.ts",
     "test": "npx ts-node ./test/demo.tsx",
+    "test:jest": "jest --passWithNoTests",
+    "test:jest:coverage": "yarn run test:jest -- --coverage",
+    "test:jest:snapshot": "yarn run test:jest -- -u",
     "test:mocha": "npx mocha --require ts-node/register \"!(node_modules)/**/*.{test,spec}.{ts,tsx}\"",
+    "test:snapshot": "yarn run test -- -u",
+    "test:tsd": "ynpx tsd",
     "npm:publish": "npm publish",
+    "preversion": "yarn run test",
     "prepublish:lockfile": "npx sync-lockfile .",
     "prepublishOnly": "yarn run ncu && yarn run sort-package-json && yarn run test",
     "prepublishOnly_": "yarn run ncu && yarn run sort-package-json && yarn run test",
@@ -38,14 +45,15 @@
     "ncu": "npx yarn-tool ncu -u",
     "sort-package-json": "npx yarn-tool sort",
     "tsc:default": "tsc -p tsconfig.json",
-    "tsc:esm": "tsc -p tsconfig.esm.json"
+    "tsc:esm": "tsc -p tsconfig.esm.json",
+    "tsc:showConfig": "ynpx get-current-tsconfig -p"
   },
   "dependencies": {
-    "crlf-normalize": "^1.0.5"
+    "crlf-normalize": "^1.0.18"
   },
   "peerDependencies": {
     "preact": "^10",
-    "react": "^17",
+    "react": "^18",
     "tslib": "^2"
   },
   "gitHead": "7087b6fcae235888b58ff84599744b33367a669f"
